--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,20 +8,38 @@
   --background-end-rgb: 255, 255, 255;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+/* Base styling for text. */
+/*********************************************/
+@layer base {
+  h1 {
+    @apply text-5xl;
   }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  h2 {
+    @apply text-4xl;
+  }
+  h3 {
+    @apply text-3xl;
+  }
+  h4 {
+    @apply text-2xl;
+  }
+  h5 {
+    @apply text-xl;
+  }
+  h6 {
+    @apply text-lg;
+  }
+  .caption {
+    @apply text-sm text-gray-600;
+  }
+  p {
+    @apply text-base;
+  }
+  li {
+    @apply text-base;
+  }
+  pre,
+  code {
+    @apply font-mono text-base;
+  }
 }
